--- a/css/style.css
+++ b/css/style.css
@@ -32,3 +32,7 @@ body {
 .panda-product {
   box-shadow: 12px 12px 12px #cecccc;
 }
+.subscribe {
+  height: 300px;
+  background-color: #fceae8;
+}
